JAVAMOB-713 * Прямая интеграция с SAP PI, переехавшая с dss-integration